# Auto-Car-04-Planning-01-Trajectory-Planning-Robotics-Approach

./: .gitignore  CMakeLists.txt  README.md
data/: udacity-map-original.csv  udacity-map-refined.csv
doc/: architecture-overview.odg
src/: config.h  main.cpp
src/map/: map.cpp  map.h
src/planning/: driving_strategy.cpp  driving_strategy.h  planner.cpp  planner.h  trajectory_generator.cpp  trajectory_generator.h
src/prediction/: predictor.cpp  predictor.h
src/vehicle/: vehicle.cpp  vehicle.h
